修改了纹理生成